# py-tidyfinance

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  great-docs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  python-package.yml
scripts/: verify_r_parity.py
tests/: config.yaml  test_add_lagged_columns.py  test_assign_portfolio.py  test_backend.py  test_breakpoint_options.py  test_compute_breakpoints.py  test_compute_long_short_returns.py  test_compute_portfolio_returns.py  test_compute_rolling_value.py  test_core.py  test_data_download.py  test_data_options.py  test_disconnect_connection.py  test_download_data.py  test_download_data_constituents.py  test_download_data_factors.py  test_download_data_fred.py  test_download_data_fred_md.py  test_download_data_huggingface.py  test_download_data_jkp.py  test_download_data_macro_predictors.py  test_download_data_osap.py  test_download_data_pastor_stambaugh.py  test_download_data_risk_free.py  test_download_data_stambaugh_yuan.py  test_download_data_stock_prices.py  test_download_data_wrds.py  test_download_data_wrds_ccm_links.py  test_download_data_wrds_compustat.py  test_download_data_wrds_crsp.py  test_download_data_wrds_fisd.py  test_download_data_wrds_trace_enhanced.py  test_estimate_model.py  test_filter_options.py  test_filter_sorting_data.py  test_get_wrds_connection.py  test_implement_portfolio_sort.py  test_internal.py  test_join_lagged_values.py  test_list_tidy_finance_chapters.py  (+6 more)
tidyfinance/: __init__.py  _internal.py  _pseudo.py  backend.py  core.py  data_download.py  download.py  download_open_source.py  download_pseudo.py  download_tidy_finance.py  download_wrds.py  lagging.py  portfolios.py  regression.py  supported_datasets.py  tidyfinance.py  utilities.py
