[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidyfinance"
authors = [{name = "Christoph Scheuch", email = "christoph@tidy-intelligence.com"},
           {name = "Christoph Frey", email = "christoph.frey@gmail.com"}]
version = "0.1.0.9000"
description = "Tidy Finance Helper Functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.21",
    "pyyaml>=6.0.2",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.14.0",
    "requests>=2.31.0",
    "pyarrow>=19.0.1",
    "psycopg2-binary>=2.9.9",
    "dotenv>=0.9.9",
    "lxml>=5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0"
]

[project.urls]
Repository = "https://github.com/tidy-finance/py-tidyfinance"
Issues = "https://github.com/tidy-finance/py-tidyfinance/issues"
Changelog = "https://github.com/tidy-finance/py-tidyfinance/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning"
]

[tool.ruff]
line-length = 80
